兼容新版本Minecraft与Java